--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,6 @@
     <color name="primary_blue">#03588C</color>
     <color name="darker_blue">#024059</color>
     <color name="background_blue">#D8E5E8</color>
+    <color name="color_worst_tip">#E6635A</color>
+    <color name="color_best_tip">#59E593</color>
 </resources>
